--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -53,11 +53,15 @@ jobs:
             echo "Unable to determine package manager"
             exit 1
           fi
-      - name: Setup Node
-        uses: actions/setup-node@v3
+#       - name: Setup Node
+#         uses: actions/setup-node@v3
+#         with:
+#           node-version: "18"
+#           cache: ${{ steps.detect-package-manager.outputs.manager }}
+      - name: install pnpm
+        uses: pnpm/action-setup@v2
         with:
-          node-version: "18"
-          cache: ${{ steps.detect-package-manager.outputs.manager }}
+          version: 6.0.2
       - name: Setup Pages
         uses: actions/configure-pages@v3
         with:
