--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "mdx-preview.preview.useVscodeMarkdownStyles": true
+  "mdx-preview.preview.useVscodeMarkdownStyles": true,
+  "mdx-preview.preview.useWhiteBackground": false
 }
