--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-social-icons": "^6.22.0",
     "simple-icons": "^14.12.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
