--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.4.6",
     "postcss": "8.4.24",
+    "prism-react-renderer": "^2.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-social-icons": "^6.22.0",
